# booking-cli

./: .gitignore  README.md  booking-cli  booking-cli.cmd  prompt.txt  pyproject.toml
src/booking_cli/: __main__.py  browser.py  cli.py  client.py  config.py  formatter.py  graphql.py  models.py  session.py
src/booking_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_client.py  test_config.py  test_graphql.py
tests/fixtures/: graphql_search.json  graphql_search_missing_fields.json  search_page.html  waf_challenge.html
